# om-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  SECURITY.md  build-instructions.md  main.py  pyproject.toml  pytest.ini  requirements.txt  start.ps1  start.sh  test.ps1  test.sh  version-manual.txt  version.txt
examples/: DEMO-05--DIMENSIONS--20260628-0619.json  DEMO-06--VALUATION-NEW--20260628-1628.json  DEMO-07--AGROFORESTRY--20260629-0136.json  DEMO-08--THREE-STATEMENT-MODEL--20260629-0339.json  DEMO-09--BUDGET-VS_ACTUAL--20260629-0352.json  DEMO-10--PAYROLL-HEADCOUNT--20260629-1050.json  DEMO-11--FORMATTING--20260702-1551.json
legal/: CODE_OF_CONDUCT.md  CONTRIBUTOR-CLA.md  CONTRIBUTOR-SIGNOFFS.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md
lib_command/: __init__.py
lib_contracts/: __init__.py  discriminators.py  errors.py  events.py  formatting.py  types.py
lib_datastore/: __init__.py  datastore.py  datastoreconf.py  delta_engine.py  models.py  payload_generator.py  session_store.py  snapshot_engine.py
lib_format/: __init__.py
lib_gui/: _view_tab.py  actions.py  app.py  calculation_flow_panel.py  cell_read_model.py  circular_refs_panel.py  config.py  draggable_rule_bar.py  editable_tab_bar.py  format_toolbox.py  grid_read_model.py  gui_event_adapter.py  gui_interaction_port.py  gui_logger.py  gui_read_model_binder.py  gui_view_model.py  icons.py  info_toolbox.py  menus.py  mini_color_picker.py  model_browser.py  outline_read_model.py  performance_watch.py  pivot_bar.py  rule_panel.py  splash.py  status_manager.py  (+9 more)
(+271 files in other folders)
